<resources>
    <string name="app_name">codeTCC</string>
    <string name="btn_desiste">Quit</string>
    <string name="btn_finish">Finish</string>
    <string name="animals">Animals</string>
    <string name="objects">Objects</string>
    <string name="title_activity_tema_select">TemaSelect</string>
    <string name="title_activity_exercicio_imagem">ExercicioImagem</string>
    <string name="title_activity_exercicio_texto">ExercicioTexto</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="back">Back</string>
    <string name="title_correct">Correct</string>
    <string name="title_wrong">Wrong</string>
    <string name="title_answers">Answers</string>
    <string name="time">00:00</string>
    <string name="advance">Advance</string>
    <string name="Default_points">00</string>
    <string name="goodmessage1">Congratulations! You are right!</string>
    <string name="goodmessage2">Fantastic!! Correct!!</string>
    <string name="badmessage1">Sorry try next one!</string>
    <string name="startquiz">Iniciar quiz</string>
    <string name="pontosfeed">Pontos feed</string>
    <string name="placar">Placar de pontuação"</string>
    <!--Animals-->
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="dolphin">Dolphin</string>
    <string name="elephant">Elephant</string>
    <string name="fox">Fox</string>
    <string name="horse">Horse</string>
    <string name="lion">Lion</string>
    <string name="monkey">Monkey</string>
    <string name="rabbit">Rabbit</string>
    <string name="tiger">Tiger</string>
    <string name="wolf">Wolf</string>
    <string name="zebra">Zebra</string>
    <!--Objects-->
    <string name="computer">Computer</string>
    <string name="eraser">Eraser</string>
    <string name="glue">Glue</string>
    <string name="microwave">Microwave</string>
    <string name="monitor">Monitor</string>
    <string name="notebook">Notebook</string>
    <string name="pen">Pen</string>
    <string name="pencil">Pencil</string>
    <string name="pencil_case">Pencil Case</string>
    <string name="pencil_sharpener">Pencil sharpener</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="ruler">Ruler</string>
    <string name="scissor">Scissor</string>
    <string name="television">Television</string>

    <string name="exercicioobjecttexto1">Choose the microwave</string>
    <string name="exercicioobjecttexto2">Choose the glue</string>
    <string name="exercicioobjecttexto3">Choose the ruler</string>
    <string name="exercicioobjecttexto4">Choose the pencil sharpener</string>
    <string name="exercicioobjecttexto5">Choose the scissor</string>
    <string name="exercicioobjecttexto6">Choose the computer</string>
    <string name="exercicioobjecttexto7">Choose the refrigerator</string>
    <string name="exercicioobjecttexto8">Choose the notebook</string>

    <string name="exerciciotextoanimal1">Choose the cat</string>
    <string name="exerciciotextoanimal2">Choose the dog</string>
    <string name="exerciciotextoanimal3">Choose the monkey</string>
    <string name="exerciciotextoanimal4">Choose the elephant</string>
    <string name="exerciciotextoanimal5">Choose the dolphin</string>
    <string name="exerciciotextoanimal6">Choose the zebra</string>
    <string name="exerciciotextoanimal7">Choose the lion</string>
    <string name="exerciciotextoanimal8">Choose the horse</string>


    <string name="title_activity_exercicio_animal_imagem6">ExercicioAnimalImagem6</string>
    <string name="title_activity_exercicio_animal_imagem7">ExercicioAnimalImagem7</string>
    <string name="title_activity_exercicio_object_imagem3">ExercicioObjectImagem3</string>
</resources>
