<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aplicativoIdiomas.view.FeedBackErrosAcertosActivity"
    tools:ignore="ContentDescription"
    android:background="#ffffff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_answers"
        android:id="@+id/answersText"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textIsSelectable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_correct"
        android:id="@+id/acertoText"
        android:textSize="25sp"
        android:layout_marginTop="99dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qtdAcerto"
        android:textSize="30sp"
        android:layout_marginTop="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_wrong"
        android:id="@+id/erroText"
        android:textSize="25sp"
        android:layout_marginTop="99dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qtdErro"
        android:textSize="30sp"
        android:layout_marginTop="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="240dp"
        android:textColor="#000000" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_voltar"
        android:text="@string/btn_finish"
        android:onClick="retornaMain"
        android:textSize="20sp"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/icon_quiz"
        android:layout_above="@+id/btn_voltar"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
