<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exercicioobjecttexto2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aplicativoIdiomas.view.ExercicioObjectTexto2"
    tools:ignore="ContentDescription"
    android:background="@drawable/background_qst">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_desiste"
        android:id="@+id/desiste"
        android:onClick="retornaMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/ic_notification_overlay"/>

    <!-- Timer-->
    <TextView
        android:id="@+id/tvCountDownTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#f8fbfb"
        android:gravity="center"
        android:text="@string/time"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <!-- Texto enunciado-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/questao2"
        android:layout_below="@+id/desiste"
        android:layout_alignParentStart="true"
        android:layout_marginStart="46dp"
        android:text="@string/exercicioobjecttexto2"
        android:textSize="20sp"
        android:textColor="#fefefe" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:id="@+id/btnimg1"
        android:background="@drawable/glue"
        android:onClick="respostaCerta"
        android:clickable="true"
        android:layout_below="@+id/questao2"
        android:layout_alignStart="@+id/questao2" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btnimg2"
        android:background="@drawable/eraser"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginEnd="44dp"
        android:layout_below="@+id/questao2"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:id="@+id/btnimg3"
        android:background="@drawable/pen"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/btnimg1"
        android:layout_alignStart="@+id/btnimg1" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btnimg4"
        android:background="@drawable/pencil_sharpener"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_alignBottom="@+id/btnimg3"
        android:layout_alignEnd="@+id/btnimg2"
        android:layout_marginEnd="14dp" />


</RelativeLayout>